# first-person-shooter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README-ffmpeg.md  README-opengl.md  README-video.md  README.md
assets/audio/: README.md
assets/images/matcap/: README.md
assets/levels/: README.md  map.txt
assets/models/cube-textured/: cube-textured.mtl
assets/models/gun/: gun.mtl
assets/models/revolver/: README.md  Revolver.mtl
assets/models/samurai/: README.md  samurai.mtl
assets/models/sniper/: README.md  sniper.mtl
assets/models/suzanne/: README.md  suzanne.mtl
assets/models/tree/: README.md  tree.mtl
assets/models/two-cubes/: two-cubes.mtl
assets/shaders/: basic.frag  basic.vert  color.frag  color.vert  cube.frag  cube.vert  cube_light.frag  cube_light.vert  cube_texture.frag  cube_texture.vert  light.frag  light.vert  light_plane.frag  light_plane.vert  light_terrain.frag  light_terrain.vert  matcap.frag  matcap.vert  skybox.frag  skybox.vert  text.frag  text.vert  texture.frag  texture_cube.frag  texture_cube.vert  texture_mesh.frag  texture_mesh.vert  texture_surface.frag  texture_surface.vert  texture_surface_mix.frag  texture_text.frag  tile.frag  tile.vert  triangle.frag  triangle.vert
assets/shaders/cube/: color.frag  light.frag
assets/shaders/instancing/: basic.frag  basic.vert  phong.frag  phong.vert  texture_cube.frag  texture_cube.vert  texture_mesh.frag  texture_mesh.vert  tile.frag  (+3 more)
include/audio/: audio.hpp
include/characters/: player.hpp  target.hpp  targets.hpp
include/controls/: key_handler.hpp  mouse_handler.hpp
include/entities/: gizmo.hpp  grass.hpp  gun.hpp  model.hpp  player.hpp  splatmap.hpp  sprite.hpp  target.hpp
include/entries/: target_entry.hpp  wall_entry.hpp  wall_orientation.hpp
include/factories/: shaders_factory.hpp  textures_factory.hpp
include/geometries/: circle.hpp  cube.hpp  cylinder.hpp  geometry.hpp  gizmo.hpp  grid.hpp  grid_lines.hpp  line.hpp  plane.hpp  pyramid.hpp  sphere.hpp  surface.hpp  terrain.hpp  text.hpp
include/glad/: glad.h
include/globals/: lights.hpp  score.hpp  targets.hpp
include/gui/: dialog.hpp  monitor.hpp  window.hpp
include/levels/: doors_renderer.hpp  floors_renderer.hpp  level_renderer.hpp  targets_renderer.hpp  tilemap.hpp  trees_renderer.hpp  walls_renderer.hpp  windows_renderer.hpp
include/materials/: heightmap.hpp  image.hpp  texture.hpp
include/math/: axis_aligned_plane.hpp  axis_plane.hpp  bounding_box.hpp  plane.hpp  ray.hpp  transformation.hpp
include/meshes/: circle.hpp  cube.hpp  cube_color.hpp  cube_light.hpp  cube_texture.hpp  cylinder.hpp  mesh.hpp  pyramid.hpp  rectangle.hpp  sphere.hpp  surface.hpp
include/models/: mesh.hpp  model.hpp  model_exception.hpp
include/navigation/: camera.hpp  camera_fps.hpp  direction.hpp  frustum.hpp  zoom.hpp
include/physics/: bounding_box.hpp
include/profiling/: memory_profiler.hpp  profiler.hpp  time_profiler.hpp
include/render/: doors_renderer.hpp  floors_renderer.hpp  level_renderer.hpp  model_renderer.hpp  renderer.hpp  text_renderer.hpp  walls_renderer.hpp
include/shaders/: program.hpp  shader.hpp  shader_exception.hpp  shaders_factory.hpp  uniforms.hpp
include/text/: font.hpp  glyphs.hpp
include/utils/: file.hpp
include/vertexes/: attribute.hpp  vao.hpp  vbo.hpp
lib/: README.md
resources/: README.md  splatmap.xcf
src/: glad.c  hello_ffmpeg.c  hello_opengl.cpp  main.c  main.cpp
src/audio/: audio.cpp
src/characters/: player.cpp  target.cpp  targets.cpp
src/controls/: key_handler.cpp  mouse_handler.cpp
src/entities/: gizmo.cpp  grass.cpp  gun.cpp  model.cpp  player.cpp  splatmap.cpp  sprite.cpp  target.cpp
src/factories/: shaders_factory.cpp  textures_factory.cpp
src/geometries/: circle.cpp  cube.cpp  cylinder.cpp  geometry.cpp  gizmo.cpp  grid.cpp  grid_lines.cpp  line.cpp  plane.cpp  pyramid.cpp  sphere.cpp  surface.cpp  terrain.cpp  text.cpp
src/globals/: lights.cpp  score.cpp  targets.cpp
src/gui/: dialog.cpp  monitor.cpp  window.cpp
src/levels/: doors_renderer.cpp  floors_renderer.cpp  level_renderer.cpp  targets_renderer.cpp  tilemap.cpp  trees_renderer.cpp  walls_renderer.cpp  windows_renderer.cpp
src/materials/: heightmap.cpp  image.cpp  texture.cpp
src/math/: axis_aligned_plane.cpp  bounding_box.cpp  plane.cpp  ray.cpp  transformation.cpp
src/meshes/: circle.cpp  cube.cpp  cube_color.cpp  cube_light.cpp  cube_texture.cpp  cylinder.cpp  mesh.cpp  pyramid.cpp  rectangle.cpp  sphere.cpp  surface.cpp  text.cpp
src/models/: mesh.cpp  model.cpp  model_exception.cpp
src/navigation/: camera.cpp  camera_fps.cpp  frustum.cpp
src/perlin/: SimplexNoise.cpp
src/physics/: bounding_box.cpp
src/profiling/: memory_profiler.cpp  profiler.cpp  time_profiler.cpp
src/render/: doors_renderer.cpp  floors_renderer.cpp  level_renderer.cpp  model_renderer.cpp  renderer.cpp  text_renderer.cpp  walls_renderer.cpp
src/shaders/: program.cpp  shader.cpp  shader_exception.cpp  shaders_factory.cpp
src/terrain/: splatmap.cpp
src/text/: font.cpp
src/utils/: file.cpp
src/vertexes/: vao.cpp  vbo.cpp
